Fix: included tablet on overlapping fix

--- a/Theme/Workspace/KDLPoshBeer/Modules/Facets@sco-2018.1.0/Sass/_facets-facet-browse.scss
+++ b/Theme/Workspace/KDLPoshBeer/Modules/Facets@sco-2018.1.0/Sass/_facets-facet-browse.scss
@@ -182,7 +182,7 @@
     top: 60px;
     z-index: 0;
 
-        @media(max-width: $screen-xs-max){
+        @media(max-width: $screen-sm-max){
            position: fixed;
            z-index: 10000;
         }
